--- a/css/styles.css
+++ b/css/styles.css
@@ -162,8 +162,8 @@ body {
     text-align-last:center;
     font-size: 23px;
     border: 1px solid gray;
-    margin: 30 30;
     padding: 10;
+    margin: 30 30;
     border-radius: 20px;
 }
 
@@ -195,7 +195,7 @@ body {
     border: 1px solid gray;
     border-radius: 20px;
     font-size: 23px;
-    font-weight: bold;
+    font-weight: bolder;
     text-transform: uppercase;
     background-color: #f7f9fc;
     width: 250px;
