--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ body {
     font-size: 23px;
     border: 1px solid gray;
     padding: 10;
-    margin: 30 30;
+    /* margin: 30 30; */
     border-radius: 20px;
 }
 
